# chimp-8

./: .gitignore  Cargo.toml  README.md
chimp_core/: Cargo.toml
chimp_core/src/: lib.rs
chimp_desktop/: Cargo.toml
chimp_desktop/src/: main.rs
chimp_wasm/: Cargo.toml
chimp_wasm/src/: lib.rs
roms/: README.md
scripts/: generate_rom_list.py
web/: chimp_wasm.js  chimp_wasm_bg.wasm  index.css  index.html  index.js
