[package]
name = "chimp_wasm"
version = "0.1.0"
authors = ["m5tfi"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
chimp_core = { path = "../chimp_core" }
js-sys = "0.3.50"
wasm-bindgen = "0.2.73"

[dependencies.web-sys]
version = "0.3.50"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "ImageData",
    "KeyboardEvent",
    "Window"
]
